#+STARTUP:showall
* NEWS (user visible changes & bigger non-visible ones)

* 1.11.x (unreleased development build)

*** mu4e

    - experimental: support folding message threads (with TAB / S-TAB).
      See the [[info:mu4e:Folding threads][manual entry]] for further details.

* 1.10 (released on March 26, 2023)

*** mu

   - a new command-line parser, which allows (hopefully!) for a better user
     interaction; better error checking and more

   - Invalid e-mail addresses are no longer added to the contacts-cache.

   - The ~cfind~ command gained ~--format=json~, which makes it easy to further
     process contact information, e.g. using ~jq~. See the manpage for more
     details.

   - The ~init~ command learned ~--reinit~ to reinitialize the database with the
     setings of an existing one

   - The ~script~ command is gone, and integrated with ~mu~ directly, i.e. the
     scripts (when enabled) are directly visible in the ~mu~ output. Also see the
     Guile section.

   - The ~extract~ command gained the ~--uncooked~ option to tell it to _not_ replace
     spaces with dashes in extracted filenames (and a few other things).

   - Revamped manpages which are now generated from ~org~ descriptions

   - Standardize on PCRE-flavored regular expressions throughout *mu*.

   - ~mu~ no longer attempts to 'expand' the `~` (and some other characters) in
     command line options that take filenames, since it was a bit unpredictable.
     So write e.g. ~--option=/home/user/hello~ instead of ~--option=~/hello~

   - Experimental: as bit of a hack, html message bodies are processed as if
     they were plain text, similar how "old mu" would do it (1.6.x and earlier).
     A nicer solution would be to convert to text, but this something for the
     future.

   - the MSYS2 (Windows) builds is _experimental_ now; some things may not work;
     see e.g. https://github.com/djcb/mu/issues?q=is%3Aissue+label%3Amsys, but
     we welcome efforts to fix those things.

*** mu4e
